Fixed navbar visibility

--- a/css/hamburger-menu.css
+++ b/css/hamburger-menu.css
@@ -6,6 +6,7 @@
   padding: 10px 10px;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 .main-menu {
   list-style-type: none;
